# ros_georegistration

./: README.md
georegistration_gazebo_msgs/: CMakeLists.txt  package.xml
georegistration_gazebo_msgs/srv/: GetModelGeomProperties.srv
georegistration_gazebo_ros/: CMakeLists.txt  package.xml
georegistration_gazebo_ros/include/georegistration_gazebo_ros/: georegistration_gazebo_ros_api_plugin.h
georegistration_gazebo_ros/src/: georegistration_gazebo_ros_api_plugin.cpp
georegistration_gazebo_ros/src/georegistration_gazebo_ros/: gazebo_interface.py
georegistration_testbed/: CMakeLists.txt  package.xml
georegistration_testbed/airframe_model/: airframe.urdf.xacro  camera_plugin.urdf.xacro  front_camera.urdf.xacro
georegistration_testbed/gazebo_plugins/: CMakeLists.txt  README.md
georegistration_testbed/gazebo_plugins/msgs/: CMakeLists.txt  model_bbox_request.proto  model_bbox_response.proto
georegistration_testbed/gazebo_plugins/src/: ModelSizePlugin.cc  ModelSizePlugin.hh  modelsize_requester.cc
georegistration_testbed/include/georegistration_testbed/: SAR_plugin.h
georegistration_testbed/launch/: cessna_cameras.launch  empty_world.launch  example1.launch  example2.launch  fixedwing.launch  multirotor.launch  spawn_mav.launch
georegistration_testbed/launch/includes/: airframe.launch.xml
georegistration_testbed/models/fixedwing/: model.config
georegistration_testbed/models/imSAR-nsp-3/: imSAR-nsp-3.dae  imSAR-nsp-3.stl  model.config  model.sdf  obj.mtl
georegistration_testbed/msg/: SARCameraView.msg
georegistration_testbed/params/: fixedwing.yaml
georegistration_testbed/rviz/: georegistration_testbed.rviz
georegistration_testbed/src/: StaticMapPlugin.cc
georegistration_testbed/src/gazebo_plugins/: SAR_plugin.cpp  gazebo_ros_modelsize.cpp  gazebo_ros_modelsize.h
georegistration_testbed/src/registration/: BFGS.py  image_registration.py  image_registration_FIM.py  image_registration_cc.py  image_registration_mi.py  image_registration_mi_ocl.py  image_registration_mi_updated.py  image_registration_node.py  image_registration_node_updated.py  image_registration_ocv_features.py  numericalldiff.py  registration_exp01.py
georegistration_testbed/src/registration/dataset_registration/dataset_rollar_coaster/: gt_dataset_rollar_coaster.txt  readme
georegistration_testbed/src/registration/results_registration/: Hessian.txt  covarianceMatrix.txt  estimatedHomography.txt  jacobian.txt  sigmaHessian.csv  sigmaHessian.txt
georegistration_testbed/worlds/: empty.world  world_01.world
georegistration_testbed/xacro/: fixedwing.xacro  multirotor.urdf.xacro  sar.xacro
google_ee/: README.md  googleearth_client.py
google_ee/satellite_ground_plane_template/: ground_plane_satellite.material  model.config  model.sdf
