<?xml version="1.0"?>
<package format="2">
  <name>georegistration_gazebo_msgs</name>
  <version>1.0.0</version>
  <description>
    Message and service data structures for interacting with Gazebo from ROS.
  </description>

  <maintainer email="arwillis@uncc.edu">Andrew Willis</maintainer>

  <license>BSD</license>


  <author>Andrew Willis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_srvs</exec_depend>
</package>


